# sphinx_ansible_theme

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .yamllint  LICENSE  README.md  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  validate-html.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml  tox.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/css/: color-scheme.css
sphinx_ansible_theme/: __init__.py  ansible_banner.html  ansible_extrabody.html  ansible_extrafooter.html  ansible_extrahead.html  ansible_versions.html  banner.html  breadcrumbs.html  built_with.html  extrabody.html  extrafooter.html  extrahead.html  extranav.html  footer.html  layout.html  searchbox.html  theme.conf  version_chooser.html  versions.html
sphinx_ansible_theme/_pygments/: lexer.py  style.py
sphinx_ansible_theme/ext/: __init__.py  pygments_lexer.py
sphinx_ansible_theme/static/css/: ansible.css
src/sphinx_ansible_theme/: __init__.py  built_with.html  extrabody.html  extrahead.html  layout.html  theme.conf
src/sphinx_ansible_theme/static/css/: ansible.css
