[build-system]
requires = [
  "setuptools >= 41.4.0",
  # required for "no-local-version" scheme + pyproject.toml support:
  "setuptools_scm[toml] >= 3.5",
  "setuptools_scm_git_archive >= 1.1",
  "wheel >= 0.33.6",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = false

[tool.setuptools_scm]
# This allows us to have version numbers that an be uploaded to test.pypi.org
# on each push made to main branch.
local_scheme = "no-local-version"
