[metadata]
name = sphinx-ansible-theme
url = https://github.com/ansible-community/sphinx_ansible_theme
project_urls =
    Documentation = https://sphinx-ansible-theme.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/ansible-community/sphinx_ansible_theme/issues
    Release Management = https://github.com/ansible-community/sphinx_ansible_theme/releases
    Source Code = https://github.com/ansible-community/sphinx_ansible_theme
description = Ansible Sphinx Theme
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible by Red Hat
author_email = info@ansible.com
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Sphinx
    Framework :: Sphinx :: Theme

    Development Status :: 6 - Mature

    License :: OSI Approved :: MIT License

    Environment :: Console
    Environment :: Web Environment

    Intended Audience :: Developers

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Operating System :: OS Independent

    Topic :: Documentation
    Topic :: Software Development :: Documentation

keywords =
    ansible
    sphinx
    theme

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 3.5.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    # `ansible-pygments` make the `ansible-output` lexer
    # and `ansible` style available in the env:

    ansible-pygments
    # Sphinx v1.6 is required by this theme ext in runtime
    Sphinx >= 1.6
    sphinx_rtd_theme

[options.entry_points]
sphinx.html_themes =
    sphinx_ansible_theme = sphinx_ansible_theme

[options.package_data]
sphinx_ansible_theme =
    theme.conf
    *.html
    static/css/*.css
    static/images/*.svg

[options.packages.find]
where = .

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D102
# 88 is official black default:
max-line-length = 88
